chore: added Auto CurseForge Server Type option

--- a/stable/minecraft-java/4.0.6/questions.yaml
+++ b/stable/minecraft-java/4.0.6/questions.yaml
@@ -187,6 +187,8 @@ questions:
                                               description: FTBA
                                             - value: CURSEFORGE
                                               description: Curseforge
+                                            - value: AUTO_CURSEFORGE
+                                              description: Auto CurseForge
                                             - value: QUILT
                                               description: Quilt
                                             - value: PUFFERFISH
